hphp/test/zend/bad/ext/spl/tests/bug61828.php
<?php
$x = new DirectoryIterator('.');
$x->__construct('/tmp');
echo "Okey";
?>